// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioBooleanField render() renders new field without form context 1`] = `
<RadioBooleanField
  name="fieldName"
  noLabel="No"
  yesLabel="Yes"
>
  <InputField
    field={[Function]}
    name="fieldName"
    noLabel="No"
    yesLabel="Yes"
  >
    <FormField
      field={[Function]}
      flexibleControlStateSize={false}
      hideErrorMessage={false}
      name="fieldName"
      noLabel="No"
      yesLabel="Yes"
    >
      <Field
        alignRight={false}
        disabled={false}
        field={[Function]}
        flexibleControlStateSize={false}
        id="fieldName"
        inline={true}
        name="fieldName"
        noLabel="No"
        required={false}
        visible={true}
        yesLabel="Yes"
      >
        <FieldWrapper
          hasControlState={true}
          inline={true}
        >
          <Component
            className="css-1tjxpxk-FieldWrapper-getPadding-borderStyle-inlineStyle etqqcs20"
          >
            <ForwardRef
              className="css-1tjxpxk-FieldWrapper-getPadding-borderStyle-inlineStyle etqqcs20"
            >
              <Styled(div)
                className="css-1tjxpxk-FieldWrapper-getPadding-borderStyle-inlineStyle etqqcs20"
              >
                <div
                  className="css-1tjxpxk-FieldWrapper-getPadding-borderStyle-inlineStyle etqqcs20 css-sncxrr"
                >
                  <FieldControl
                    alignRight={false}
                    controlState={
                      <ControlState
                        model={
                          MockModel {
                            "initialData": Object {
                              "fieldName": undefined,
                            },
                            "props": Object {
                              "children": [Function],
                              "className": undefined,
                              "field": [Function],
                              "flexibleControlStateSize": false,
                              "hideErrorMessage": false,
                              "name": "fieldName",
                              "noLabel": "No",
                              "yesLabel": "Yes",
                            },
                          }
                        }
                        name="fieldName"
                      />
                    }
                    disabled={false}
                    errorState={
                      <Observer>
                        [Function]
                      </Observer>
                    }
                    flexibleControlStateSize={false}
                    inline={true}
                  >
                    <FieldControlErrorWrapper
                      inline={true}
                    >
                      <Component
                        className="css-1xbxyck-FieldControlErrorWrapper e78b1iv0"
                        inline={true}
                      >
                        <ForwardRef
                          className="css-1xbxyck-FieldControlErrorWrapper e78b1iv0"
                        >
                          <Styled(div)
                            className="css-1xbxyck-FieldControlErrorWrapper e78b1iv0"
                          >
                            <div
                              className="css-1xbxyck-FieldControlErrorWrapper e78b1iv0 css-roynbj"
                            >
                              <FieldControlWrapper>
                                <Component
                                  className="css-1ke1xob-FieldControlWrapper e78b1iv2"
                                >
                                  <ForwardRef
                                    className="css-1ke1xob-FieldControlWrapper e78b1iv2"
                                  >
                                    <Styled(div)
                                      className="css-1ke1xob-FieldControlWrapper e78b1iv2"
                                    >
                                      <div
                                        className="css-1ke1xob-FieldControlWrapper e78b1iv2 css-sncxrr"
                                      >
                                        <FieldControlStyled
                                          alignRight={false}
                                        >
                                          <Component
                                            alignRight={false}
                                            className="css-1e3k5jy-FieldControlStyled e78b1iv1"
                                          >
                                            <ForwardRef
                                              className="css-1e3k5jy-FieldControlStyled e78b1iv1"
                                            >
                                              <Styled(div)
                                                className="css-1e3k5jy-FieldControlStyled e78b1iv1"
                                              >
                                                <div
                                                  className="css-1e3k5jy-FieldControlStyled e78b1iv1 css-roynbj"
                                                >
                                                  <Observer>
                                                    <RadioBoolean
                                                      disabled={false}
                                                      field={[Function]}
                                                      id="fieldName"
                                                      initialData={
                                                        Object {
                                                          "fieldName": undefined,
                                                        }
                                                      }
                                                      innerRef={[Function]}
                                                      name="fieldName"
                                                      noLabel="No"
                                                      onBlur={[Function]}
                                                      onChange={[Function]}
                                                      yesFirst={true}
                                                      yesLabel="Yes"
                                                    >
                                                      <div>
                                                        <Option
                                                          checked={false}
                                                          disabled={false}
                                                          label="Yes"
                                                          name="fieldName"
                                                          onChange={[Function]}
                                                          value="true"
                                                        >
                                                          <div
                                                            className="radio"
                                                          >
                                                            <label
                                                              style={
                                                                Object {
                                                                  "fontWeight": "normal",
                                                                }
                                                              }
                                                            >
                                                              <input
                                                                checked={false}
                                                                disabled={false}
                                                                name="fieldName"
                                                                onChange={[Function]}
                                                                type="radio"
                                                                value="true"
                                                              />
                                                               
                                                              Yes
                                                            </label>
                                                          </div>
                                                        </Option>
                                                        <Option
                                                          checked={false}
                                                          disabled={false}
                                                          label="No"
                                                          name="fieldName"
                                                          onChange={[Function]}
                                                          value="false"
                                                        >
                                                          <div
                                                            className="radio"
                                                          >
                                                            <label
                                                              style={
                                                                Object {
                                                                  "fontWeight": "normal",
                                                                }
                                                              }
                                                            >
                                                              <input
                                                                checked={false}
                                                                disabled={false}
                                                                name="fieldName"
                                                                onChange={[Function]}
                                                                type="radio"
                                                                value="false"
                                                              />
                                                               
                                                              No
                                                            </label>
                                                          </div>
                                                        </Option>
                                                      </div>
                                                    </RadioBoolean>
                                                  </Observer>
                                                </div>
                                              </Styled(div)>
                                            </ForwardRef>
                                          </Component>
                                        </FieldControlStyled>
                                        <FieldControlState
                                          flexibleControlStateSize={false}
                                        >
                                          <Component
                                            className="css-1j6hng-FieldControlState e1rziqw00"
                                            flexibleControlStateSize={false}
                                          >
                                            <ForwardRef
                                              className="css-1j6hng-FieldControlState e1rziqw00"
                                            >
                                              <Styled(div)
                                                className="css-1j6hng-FieldControlState e1rziqw00"
                                              >
                                                <div
                                                  className="css-1j6hng-FieldControlState e1rziqw00 css-sncxrr"
                                                >
                                                  <ControlState
                                                    model={
                                                      MockModel {
                                                        "initialData": Object {
                                                          "fieldName": undefined,
                                                        },
                                                        "props": Object {
                                                          "children": [Function],
                                                          "className": undefined,
                                                          "field": [Function],
                                                          "flexibleControlStateSize": false,
                                                          "hideErrorMessage": false,
                                                          "name": "fieldName",
                                                          "noLabel": "No",
                                                          "yesLabel": "Yes",
                                                        },
                                                      }
                                                    }
                                                    name="fieldName"
                                                  >
                                                    <Observer />
                                                    <Observer />
                                                  </ControlState>
                                                </div>
                                              </Styled(div)>
                                            </ForwardRef>
                                          </Component>
                                        </FieldControlState>
                                      </div>
                                    </Styled(div)>
                                  </ForwardRef>
                                </Component>
                              </FieldControlWrapper>
                              <Observer />
                            </div>
                          </Styled(div)>
                        </ForwardRef>
                      </Component>
                    </FieldControlErrorWrapper>
                  </FieldControl>
                </div>
              </Styled(div)>
            </ForwardRef>
          </Component>
        </FieldWrapper>
      </Field>
    </FormField>
  </InputField>
</RadioBooleanField>
`;

exports[`RadioBooleanField render() renders with form context 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <div
      className="control-group radio-boolean"
    >
      <div
        className="radio"
        key="yes"
      >
        <label
          style={
            Object {
              "fontWeight": "normal",
            }
          }
        >
          <input
            checked={true}
            disabled={false}
            name="fieldName"
            onChange={[Function]}
            type="radio"
            value="true"
          />
           
          Yes
        </label>
      </div>
      <div
        className="radio"
        key="no"
      >
        <label
          style={
            Object {
              "fontWeight": "normal",
            }
          }
        >
          <input
            checked={false}
            disabled={false}
            name="fieldName"
            onChange={[Function]}
            type="radio"
            value="false"
          />
           
          No
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioBooleanField render() renders without form context 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <div
      className="control-group radio-boolean"
    >
      <div
        className="radio"
        key="yes"
      >
        <label
          style={
            Object {
              "fontWeight": "normal",
            }
          }
        >
          <input
            checked={false}
            disabled={false}
            name="fieldName"
            onChange={[Function]}
            type="radio"
            value="true"
          />
           
          Yes
        </label>
      </div>
      <div
        className="radio"
        key="no"
      >
        <label
          style={
            Object {
              "fontWeight": "normal",
            }
          }
        >
          <input
            checked={false}
            disabled={false}
            name="fieldName"
            onChange={[Function]}
            type="radio"
            value="false"
          />
           
          No
        </label>
      </div>
    </div>
  </div>
</div>
`;
